# swagger.yml
@@ -11,7 +11,7 @@ servers:
   - url: http://localhost:8080
 paths:
   /api/normalize:
-    get:
+    post:
       tags:
         - Ejercicios
       summary: StreetNormalizer
@@ -34,6 +34,7 @@ paths:
 
 
         - "**departamento**": String
+      
       requestBody:
         content:
           application/json:
@@ -141,7 +142,7 @@ paths:
                   value:
                     Error: Street not found
   /api/distanceCalculator/:
-    get:
+    post:
       tags:
         - Ejercicios
       summary: distanceCalculator
@@ -251,24 +252,32 @@ paths:
                   summary: 400 direccion needed
                   value:
                     Error: Parameter direccion needed
-  /api/currencyFinder/:
+  /api/currencyFinder/{pais}:
     get:
       tags:
         - Ejercicios
       summary: CurrencyFinder
+      parameters:
+        - name: pais
+          in: path
+          schema:
+            type: string
+          required: true
+          description: Name of the country you want to find the currency.
       description: |-
         **Find the currency of the country entered.**
 
         **Obligatory parameters:**
 
         - "**pais**": String
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              example:              
-                pais: Brazil 
+      
+      # requestBody:
+      #   content:
+      #     application/json:
+      #       schema:
+      #         type: object
+      #         example:              
+      #           pais: Brazil 
       responses:
         '200':
           description: OK
